Update Landscape or Portrait.html

--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -57,14 +57,14 @@
        <fieldset>
          <legend> Enter the display Geometery</legend>
       <p>
-        <label for="textfield">Number1:</label>
+        <label for="widthfield">width:</label>
         <input name="widthNumber" type="text" id="widthNumber">
-          <a id="validityTest1">Type a Number</a>
+          <a id="widthNumber">Type a Number</a>
       </p>
       <p>
-        <label for="textfield">Number2:</label>
+        <label for="heightfield">Height:</label>
         <input name="heightNumber" type="text" id="heightNumber">
-          <a id="validityTest2">Type a Number</a>
+          <a id="heightNumber">Type a Number</a>
       </p>
 
     </fieldset>
@@ -73,7 +73,7 @@
       <br><br>
       <button type="button" onclick="main()">Submit</button>
       <br>
-      <h3>The answer is:
+      <h3>It is:
 
       </h3> Display Geometery is <a id="geo"> </a><h3>
       <article></article>
