--- a/childPage/Demerit Points.html
+++ b/childPage/Demerit Points.html
@@ -62,9 +62,9 @@
       <br><br>
       <button type="button" onclick="main()">Submit</button>
       <br>
-      <h3>The answer is:
-        <a id="">What is the Answer?!!!</a>
-      </h3>  <a id=""> </a><h3>
+      <h3>This is the Answer:
+        <a id="points">??</a>
+
         </fieldset>
       <article></article>
 
