--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -18,6 +18,9 @@
       body{
       background-color: #44257c;
 }
+      nav{
+        background-color: yellow;
+      }
     </style>
     <header>
 
@@ -55,6 +58,7 @@
       <!-- See: https://www.w3schools.com/html/html_entities.asp-->
       <!-- Non-breaking real space, adds real space to the webapge that is not elminiated by the browser (hard coded space)  -->
        <fieldset>
+
          <legend> Enter the display Geometery</legend>
       <p>
         <label for="widthfield">width:</label>
