--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 <aside></aside>
 <section><article></articale></section>
   <style>
+
+  body{
+    text-color: white;
+  }
 ol {
 
     list-style-type: none;
