Update Max of Two Numbers.html

--- a/childPage/Max of Two Numbers.html
+++ b/childPage/Max of Two Numbers.html
@@ -53,7 +53,7 @@
       </fieldset>
 
       <br><br>
-    <button type="button" onclick="main()">Submit</button>
+    <button type="button" onclick="main()"Submit></button>
       <br>
       <h3><a id="answer"> Are you connected </a> </h3>
     </section>
