--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -75,7 +75,7 @@
       <p>&nbsp</p>
       <!--Submit Button-->
       <br><br>
-      <button type="button" onclick="main()"></button>
+      <button type="button" onclick="main()">submit</button>
       <br>
       <h3>It is:
 
