Update Landscape or Portrait.html

--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -75,7 +75,9 @@
       <p>&nbsp</p>
       <!--Submit Button-->
       <br><br>
-      <button type="submit" onclick="main()">Submit
+      <button type="button" onclick="main()">
+      Submit
+
       </button>
       <br>
       <h3>It is:
