--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -75,10 +75,7 @@
       <p>&nbsp</p>
       <!--Submit Button-->
       <br><br>
-      <button type="button" onclick="main()">
-      Submit
-
-      </button>
+    <button type="button" ondblclick="main()"> Submit </button>
       <br>
       <h3>It is:
 
