Update Landscape or Portrait.html

--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -61,14 +61,14 @@
 
          <legend> Enter the display Geometery</legend>
       <p>
-        <label for="widthfield">width:</label>
-        <input name="widthNumber" type="text" id="widthNumber">
-          <a id="widthNumber">Type a Number</a>
+        <label for="textfield">width:</label>
+        <input name="textfield" type="text" id="widthNumber">
+          <a id="validityTest1">Type a Number</a>
       </p>
       <p>
-        <label for="heightfield">Height:</label>
-        <input name="heightNumber" type="text" id="heightNumber">
-          <a id="heightNumber">Type a Number</a>
+        <label for="textfield">Height:</label>
+        <input name="textfield" type="text" id="heightNumber">
+          <a id="validityTest2">Type a Number</a>
       </p>
 
     </fieldset>
