--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -63,7 +63,7 @@
       <p>
         <label for="textfield">width:</label>
         <input name="textfield" type="text" id="widthNumber">
-          <a id="validityTest1">Type a Number</a>
+          <a id="validityTest1"> PleaseType a Number</a>
       </p>
       <p>
         <label for="textfield">Height:</label>
