Update Landscape or Portrait.html

--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -63,12 +63,12 @@
       <p>
         <label for="textfield">width:</label>
         <input name="textfield" type="text" id="widthNumber">
-          <a id="validityTest1"> PleaseType a Number</a>
+          <a id="validityTest1"> Please Type a Number</a>
       </p>
       <p>
         <label for="textfield">Height:</label>
         <input name="textfield" type="text" id="heightNumber">
-          <a id="validityTest2">Type a Number</a>
+          <a id="validityTest2">please Type a Number</a>
       </p>
 
     </fieldset>
