Update Landscape or Portrait.html

--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -75,7 +75,7 @@
       <p>&nbsp</p>
       <!--Submit Button-->
       <br><br>
-    <button type="Submit" ondblclick="main()"> Submit </button>
+    <button type="button" ondblclick="main()"> Submit </button>
       <br>
       <h3>It is:
 
