Update Landscape or Portrait.html

--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -58,7 +58,7 @@
       <!-- See: https://www.w3schools.com/html/html_entities.asp-->
       <!-- Non-breaking real space, adds real space to the webapge that is not elminiated by the browser (hard coded space)  -->
        <fieldset>
-         <a id="CanBeAnything"> </a>
+         <a id="CanBeAnything">Please Type a Number </a>
          <legend> Enter the display Geometery</legend>
       <p>
         <label for="textfield">width:</label>
